# orezy-utils

./: .gitignore  README.md  crop_finetune.py  crop_model.py  main.py  pyproject.toml  rotate_finetune.py  rotate_model.py  setup-runpod.sh  utils.py
base_model_trainer/create_dataset/: extract_scantailor_data.py
base_model_trainer/network/: rotate_dataset.py  rotate_network.py
base_model_trainer/training/: crop_train.py  rotate_train.py
cropilot-api-tools/: README.md  trainer.py
cropilot_api_tools/: README.md  requirements-trainer.txt  trainer.py  uploader.py
models/: dataset.yaml
rotation_model/: rotate_dataset.py  rotate_network.py  rotate_train.py
scripts/: add_to_rotate_dataset.py  assign_classes_and_cleanup.py  balance_train_val_test.py  check_bbox_validity.py  cluster_scans.py  compress_image.py  create_yolo_dataset.py  create_yolo_dataset_padded.py  deduplicate_images.py  delete_empty_bbox.py  extract_scantailor_data.py  generate_test_data.py  upload_and_process_title.py  visualize.py  visualize_dataset.py
src/create_dataset/: assign_classes_and_cleanup.py  create_yolo_dataset.py  extract_scantailor_data.py
src/network/: rotate_dataset.py  rotate_network.py
src/training/: crop_train.py  rotate_train.py
trace_app/: README.md  page_tracer.py  requirements.txt
train_app/: crop_finetune.py  rotate_finetune.py
visualization_app/: crop_model.py  main.py  rotate_model.py  schemas.py  utils.py
