[project]
name = "orezy-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.8.3",
    "comet-ml>=3.50.0",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "motor>=3.7.1",
    "opencv-python>=4.12.0.88",
    "pydantic-settings>=2.10.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.13.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.1",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.179",
    "uvicorn>=0.35.0",
]
